[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/common/pewpew_hpbar_foreground.png" type="Texture" id=1]
[ext_resource path="res://ui/common/pewpew_hpbar_over.png" type="Texture" id=2]
[ext_resource path="res://ui/common/pewpew_hpbar_bg.png" type="Texture" id=3]
[ext_resource path="res://ArmorBar.gd" type="Script" id=4]

[node name="ArmorBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorDelayedStatus" type="TextureProgress" parent="."]
margin_right = 56.0
margin_bottom = 8.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.741176, 0.4, 0.0156863, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorStatus" type="TextureProgress" parent="."]
margin_right = 56.0
margin_bottom = 8.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.968627, 0.607843, 0.0196078, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorTween" type="Tween" parent="."]
[connection signal="tween_completed" from="ArmorTween" to="." method="_on_ArmorTween_tween_completed"]
